--- a/rocka-chat/package.json
+++ b/rocka-chat/package.json
@@ -5,6 +5,11 @@
     "start": "meteor run"
   },
   "dependencies": {
-    "meteor-node-stubs": "~0.2.0"
+    "bcrypt": "^0.8.7",
+    "faker": "^3.1.0",
+    "is_js": "^0.9.0",
+    "jquery": "^3.1.1",
+    "meteor-node-stubs": "~0.2.0",
+    "moment": "^2.15.1"
   }
 }
